# NeuroStreamer

./: README.md
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/_Materials/: SliceMaterial.mat  VolumeMaterial.mat
Assets/_Scenes/: MainScene.unity  SampleScene.unity
Assets/_Scripts/: MedicalCameraController.cs  NativeInterop.cs  UIController.cs  UIControllerSimple.cs  VolumeDataGenerator.cs  VolumeRenderer.cs
Assets/_Shader/: SliceView.shader  VolumeRaymarching.shader
NativeDLL/: BuildHelper.bat  CMakeLists.txt  MedicalImageProcessing.cpp  MedicalImageProcessing.exp  MedicalImageProcessing.h  MedicalImageProcessing.lib
ProjectSettings/: ProjectSettings.asset
